test_data/Xml/Unexpected/Unserializable/InvalidClassName/langStringPreferredNameTypeIec61360/wrong.xml.exception
Expected an element representing an instance of class LangStringPreferredNameTypeIec61360 with element name langStringPreferredNameTypeIec61360, but got: utterlyInvalid at: the beginning